# ansible-role-nebula

./: .ansible-lint  .gitignore  .yamllint  README.md  pyproject.toml  renovate.json
.github/workflows/: build.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: ca.yml  determine_ca.yml  determine_real_ip.yml  download.yml  main.yml  member.yml  member_preflight.yml
templates/: config.yml.j2  nebula.service.j2
tests/: ansible.cfg  test.yml
tests/inventories/cloud/host_vars/: ansible-role-nebula-1.yml  ansible-role-nebula-4.yml
tests/inventories/do/host_vars/: ansible-role-nebula-1.yml  ansible-role-nebula-4.yml  ansible-role-nebula-5.yml
tests/inventories/local/: hosts
tests/inventories/local/host_vars/: local-2.yml
tests/inventory/group_vars/: nebula_member.yml
tests/inventory/host_vars/: ansible-role-nebula-1.yml  ansible-role-nebula-2.yml  ansible-role-nebula-4.yml  do1.yml  do2.yml  do3.yml  do4.yml  do5.yml
tests/scripts/: check-idempotency.sh
tests/terraform/: .gitignore  .terraform.lock.hcl  ansible_inventory.tpl  do.tf  main.tf  variables.tf
vars/: main.yml
