[tool.poetry]
name = "nebula"
version = "0.1.0"
description = "Nebula Mesh setup"
authors = ["Utku Ozdemir <uoz@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# https://pypi.org/project/ansible/#history
ansible = "==6.3.0"
# https://pypi.org/project/ansible-lint/#history
ansible-lint = "==6.5.1"
# https://pypi.org/project/yamllint/#history
yamllint = "==1.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
